--- a/src/style.css
+++ b/src/style.css
@@ -61,7 +61,8 @@ button {
 .info-box {
   background-color: white;
   display: flex;
-  height: 23vh;
+  /* height: 23vh; */
+
   border-radius: 0.7rem;
   align-items: center;
   justify-content: center;
@@ -74,28 +75,23 @@ button {
   grid-gap: 1rem;
 }
 
-h3 {
+span {
   text-align: left;
   color: var(--Dark-Gray);
   font-weight: 700;
 }
 
-h2 {
+p {
   color: var(--Very-Dark-Gray);
+  font-weight: 700;
 }
 
 #map {
-  /* width: 100%;
-  height: 100vh;
-  position: relative;
-  z-index: -1;
-  top: 0;
-  bottom: 0; */
   position: absolute;
   top: 0;
   bottom: 0;
   width: 100%;
- z-index: -1;
+  z-index: -1;
 }
 
 @media screen and (max-width: 834px) {
@@ -105,8 +101,8 @@ h2 {
 
   .info-box {
     text-align: center;
-    width: 65vh;
-    height: 19vh;
+    width: 64vh;
+    height: 12vh;
   }
 
   h3 {
@@ -118,6 +114,11 @@ h2 {
     display: grid;
     grid-gap: 1rem;
   }
+
+  .ip-address {
+    padding-top: 0.9rem;
+    gap: 1rem;
+  }
 }
 
 @media screen and (max-width: 820px) {
@@ -127,11 +128,11 @@ h2 {
 
   .info-box {
     text-align: center;
-    width: 65vh;
-    height: 19vh;
+    width: 64vh;
+    height: 14vh;
   }
 
-  h3 {
+  span {
     text-align: center;
   }
 
@@ -153,7 +154,7 @@ h2 {
     height: 16vh;
   }
 
-  h3 {
+  span {
     text-align: center;
   }
 
@@ -161,6 +162,11 @@ h2 {
     margin: 1rem;
     display: grid;
     grid-gap: 1rem;
+  }
+
+  .ip-address {
+    padding-top: 0.9rem;
+    gap: 1rem;
   }
 }
 
@@ -169,6 +175,7 @@ h2 {
     background-image: url(/images/pattern-bg-mobile.png);
     background-repeat: no-repeat;
     background-size: cover;
+    height: 25vh;
   }
 
   input {
@@ -177,13 +184,13 @@ h2 {
 
   .info-box {
     display: grid;
-    height: 56vh;
-    width: 42vh;
+    height: 48vh;
+    width: 25vh;
     margin: 0 auto;
     text-align: center;
   }
 
-  h3 {
+  span {
     text-align: center;
   }
 
@@ -191,6 +198,11 @@ h2 {
     margin: 1rem;
     display: grid;
     grid-gap: 1rem;
+  }
+
+  .ip-address {
+    padding-top: 0.9rem;
+    gap: 1rem;
   }
 }
 
@@ -207,13 +219,13 @@ h2 {
 
   .info-box {
     display: grid;
-    height: 56vh;
-    width: 42vh;
+    height: 48vh;
+    width: 33vh;
     margin: 0 auto;
     text-align: center;
   }
 
-  h3 {
+  span {
     text-align: center;
   }
 
@@ -221,6 +233,11 @@ h2 {
     margin: 1rem;
     display: grid;
     grid-gap: 1rem;
+  }
+
+  .ip-address {
+    padding-top: 0.9rem;
+    gap: 1rem;
   }
 }
 
@@ -237,13 +254,13 @@ h2 {
 
   .info-box {
     display: grid;
-    height: 55vh;
-    width: 41vh;
+    height: 46vh;
+    width: 32vh;
     margin: 0 auto;
     text-align: center;
   }
 
-  h3 {
+  span {
     text-align: center;
   }
 
@@ -252,22 +269,34 @@ h2 {
     display: grid;
     grid-gap: 1rem;
   }
+
+  .ip-address {
+    padding-top: 0.9rem;
+    gap: 1rem;
+  }
 }
 
 @media screen and (max-width: 393px) {
+  .container {
+    background-image: url(/images/pattern-bg-mobile.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 25vh;
+  }
+
   input {
     width: 17rem;
   }
 
   .info-box {
     display: grid;
-    height: 56vh;
-    width: 42vh;
+    height: 48vh;
+    width: 32vh;
     margin: 0 auto;
     text-align: center;
   }
 
-  h3 {
+  span {
     text-align: center;
   }
 
@@ -275,6 +304,11 @@ h2 {
     margin: 1rem;
     display: grid;
     grid-gap: 1rem;
+  }
+
+  .ip-address {
+    padding-top: 0.9rem;
+    gap: 1rem;
   }
 }
 
@@ -291,8 +325,8 @@ h2 {
 
   .info-box {
     display: grid;
-    height: 61vh;
-    width: 42vh;
+    height: 52vh;
+    width: 38vh;
     margin: 0 auto;
     text-align: center;
   }
@@ -306,35 +340,9 @@ h2 {
     display: grid;
     grid-gap: 1rem;
   }
-}
-
-@media screen and (max-width: 360px) {
-  .container {
-    background-image: url(/images/pattern-bg-mobile.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
-  input {
-    width: 15rem;
-  }
-
-  .info-box {
-    display: grid;
-    height: 56vh;
-    width: 42vh;
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  h3 {
-    text-align: center;
-  }
-
-  .info-box > div {
-    margin: 1rem;
-    display: grid;
-    grid-gap: 1rem;
+  .ip-address {
+    padding-top: 0.9rem;
+    gap: 1rem;
   }
 }
 
@@ -351,13 +359,13 @@ h2 {
 
   .info-box {
     display: grid;
-    height: 64vh;
-    width: 42vh;
+    height: 54vh;
+    width: 37vh;
     margin: 0 auto;
     text-align: center;
   }
 
-  h3 {
+  span {
     text-align: center;
   }
 
@@ -365,6 +373,47 @@ h2 {
     margin: 1rem;
     display: grid;
     grid-gap: 1rem;
+  }
+
+  .ip-address {
+    padding-top: 0.9rem;
+    gap: 1rem;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .container {
+    background-image: url(/images/pattern-bg-mobile.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 25vh;
+  }
+
+  input {
+    width: 15rem;
+  }
+
+  .info-box {
+    display: grid;
+    height: 49vh;
+    width: 32vh;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  span {
+    text-align: center;
+  }
+
+  .info-box > div {
+    margin: 1rem;
+    display: grid;
+    grid-gap: 1rem;
+  }
+
+  .ip-address {
+    padding-top: 0.9rem;
+    gap: 1rem;
   }
 }
 
@@ -373,6 +422,7 @@ h2 {
     background-image: url(/images/pattern-bg-mobile.png);
     background-repeat: no-repeat;
     background-size: cover;
+    height: 27vh;
   }
 
   input {
@@ -381,14 +431,14 @@ h2 {
 
   .info-box {
     display: grid;
-    height: 90vh;
-    width: 52vh;
+    height: 77vh;
+    width: 45vh;
     margin: 0 auto;
     text-align: center;
-    margin-top: -1rem;
+    margin-top: 0.4rem;
   }
 
-  h3 {
+  span {
     text-align: center;
   }
 
@@ -396,5 +446,10 @@ h2 {
     margin: 1rem;
     display: grid;
     grid-gap: 1rem;
+  }
+
+  .ip-address {
+    padding-top: 0.9rem;
+    gap: 1rem;
   }
 }
