--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
 :root {
-  --Very-Dark-Gray: hsl(0, 0%, 17%);
-  --Dark-Gray: hsl(0, 0%, 59%);
+  --very-dark-gray: hsl(0, 0%, 17%);
+  --dark-gray: hsl(0, 0%, 59%);
+  --white: #fff;
+  --blue: #45409c;
 }
 
 * {
@@ -10,446 +12,162 @@
   font-family: "Rubik", sans-serif;
 }
 
-h1 {
-  color: white;
-  font-weight: 500;
-  text-align: center;
+main {
+  min-height: 100vh;
 }
 
-.container {
-  background-image: url(/images/pattern-bg-desktop.png);
+.top {
   height: 40vh;
+  padding: 1.25rem;
+  background: url(../images/pattern-bg-desktop.png) no-repeat top
+    center/cover;
 }
 
-.ip-address {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  padding-top: 2rem;
-  gap: 2rem;
+.title {
+  color: var(--white);
+  text-align: center;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
 
-.ip-input {
+form {
+  margin: 0.75rem 0;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-input {
-  font-size: 18px;
-  width: 25rem;
-  height: 3rem;
-  padding: 0.3rem 1.2rem;
-  border-top-left-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
+#ip-input {
+  width: min(500px, 70%);
+  font-size: 1rem;
+  padding: 1rem 1.25rem;
+
   border: none;
   outline: none;
+  border-top-left-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
 }
 
-button {
-  width: 3rem;
-  height: 3rem;
-  padding: 0.3rem 1.2rem;
-  background-color: black;
-  border: none;
-  outline: none;
-  border-top-right-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+button[type="submit"] {
+  padding: 1rem 1.25rem;
+  border: 1.5px solid var(--very-dark-gray);
+  border-top-right-radius: 0.75rem;
+  border-bottom-right-radius: 0.75rem;
+  background-color: var(--very-dark-gray);
   cursor: pointer;
+  transition: all 0.25s ease-in-out;
 }
 
-.info-box {
-  background-color: white;
+button[type="submit"]:hover {
+  background-color: hsl(0, 0%, 28%);
+  border: 1.5px solid hsl(0, 0%, 28%);
+}
+
+.info {
+  position: relative;
+  margin: 0 auto;
+  padding: 1.5rem 0;
+  width: 80%;
+  min-height: 20vh;
+  top: 20%;
+  z-index: 500;
+  border-radius: 1rem;
+  background-color: var(--white);
+  box-shadow: 0 0 1.2rem rgba(0, 0, 0, 0.25);
+
   display: flex;
-  /* height: 23vh; */
-
-  border-radius: 0.7rem;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 10px 7px 32px -26px var(--Very-Dark-Gray);
+  justify-content: space-between;
 }
 
-.info-box > div {
-  margin: 2rem;
-  display: grid;
-  grid-gap: 1rem;
+.box {
+  width: 25%;
+  padding: 0 1.5rem;
+  border-left: 1px solid var(--dark-gray);
 }
 
-span {
-  text-align: left;
-  color: var(--Dark-Gray);
+.ip-info-box {
+  border-left: none;
+}
+
+.box > span {
+  display: block;
+}
+
+.field-name {
+  font-size: 0.7rem;
   font-weight: 700;
+  color: var(--dark-gray);
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
 }
 
-p {
-  color: var(--Very-Dark-Gray);
-  font-weight: 700;
+.info-field {
+  margin-top: 0.7rem;
+  font-weight: 500;
+  letter-spacing: 0.2px;
+  word-wrap: break-word;
 }
 
 #map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  z-index: -1;
+  height: 70vh;
 }
 
-@media screen and (max-width: 834px) {
-  .container {
-    height: 20vh;
-  }
 
-  .info-box {
-    text-align: center;
-    width: 64vh;
-    height: 12vh;
-  }
-
-  h3 {
-    text-align: center;
-  }
-
-  .info-box > div {
-    margin: 1rem;
-    display: grid;
-    grid-gap: 1rem;
-  }
-
-  .ip-address {
-    padding-top: 0.9rem;
-    gap: 1rem;
+@media (max-width: 920px) {
+  .info-field {
+    font-size: 0.9rem;
   }
 }
 
-@media screen and (max-width: 820px) {
-  .container {
-    height: 20vh;
+@media (max-width: 770px) {
+  #ip-input {
+    width: min(380px, 70%);
   }
 
-  .info-box {
-    text-align: center;
-    width: 64vh;
-    height: 14vh;
-  }
-
-  span {
-    text-align: center;
-  }
-
-  .info-box > div {
-    margin: 1rem;
-    display: grid;
-    grid-gap: 1rem;
+  .info {
+    width: 85vw;
   }
 }
 
-@media screen and (max-width: 768px) {
-  .container {
-    height: 30vh;
+@media (max-width: 600px) {
+  .top {
+    height: 35vh;
+    padding: 0.7rem;
   }
 
-  .info-box {
+  .title {
+    font-size: 1.5rem;
+  }
+
+  .info {
+    width: 75vw;
+    flex-direction: column;
     text-align: center;
-    width: 76vh;
-    height: 16vh;
+    gap: 1.1rem;
+    top: 12%;
   }
 
-  span {
-    text-align: center;
-  }
-
-  .info-box > div {
-    margin: 1rem;
-    display: grid;
-    grid-gap: 1rem;
-  }
-
-  .ip-address {
-    padding-top: 0.9rem;
-    gap: 1rem;
+  .box {
+    width: 100%;
+    border: none;
   }
 }
 
-@media screen and (max-width: 412px) {
-  .container {
-    background-image: url(/images/pattern-bg-mobile.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+@media (min-height: 1000px) {
+  main {
+    min-height: 90vh;
+  }
+
+  .top {
     height: 25vh;
   }
 
-  input {
-    width: 19rem;
+  .info {
+    top: 25%;
+    min-height: 15vh;
   }
 
-  .info-box {
-    display: grid;
-    height: 48vh;
-    width: 25vh;
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  span {
-    text-align: center;
-  }
-
-  .info-box > div {
-    margin: 1rem;
-    display: grid;
-    grid-gap: 1rem;
-  }
-
-  .ip-address {
-    padding-top: 0.9rem;
-    gap: 1rem;
-  }
-}
-
-@media screen and (max-width: 414px) {
-  .container {
-    background-image: url(/images/pattern-bg-mobile.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
-  input {
-    width: 16rem;
-  }
-
-  .info-box {
-    display: grid;
-    height: 48vh;
-    width: 33vh;
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  span {
-    text-align: center;
-  }
-
-  .info-box > div {
-    margin: 1rem;
-    display: grid;
-    grid-gap: 1rem;
-  }
-
-  .ip-address {
-    padding-top: 0.9rem;
-    gap: 1rem;
-  }
-}
-
-@media screen and (max-width: 428px) {
-  .container {
-    background-image: url(/images/pattern-bg-mobile.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
-  input {
-    width: 16rem;
-  }
-
-  .info-box {
-    display: grid;
-    height: 46vh;
-    width: 32vh;
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  span {
-    text-align: center;
-  }
-
-  .info-box > div {
-    margin: 1rem;
-    display: grid;
-    grid-gap: 1rem;
-  }
-
-  .ip-address {
-    padding-top: 0.9rem;
-    gap: 1rem;
-  }
-}
-
-@media screen and (max-width: 393px) {
-  .container {
-    background-image: url(/images/pattern-bg-mobile.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 25vh;
-  }
-
-  input {
-    width: 17rem;
-  }
-
-  .info-box {
-    display: grid;
-    height: 48vh;
-    width: 32vh;
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  span {
-    text-align: center;
-  }
-
-  .info-box > div {
-    margin: 1rem;
-    display: grid;
-    grid-gap: 1rem;
-  }
-
-  .ip-address {
-    padding-top: 0.9rem;
-    gap: 1rem;
-  }
-}
-
-@media screen and (max-width: 390px) {
-  .container {
-    background-image: url(/images/pattern-bg-mobile.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
-  input {
-    width: 15rem;
-  }
-
-  .info-box {
-    display: grid;
-    height: 52vh;
-    width: 38vh;
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  h3 {
-    text-align: center;
-  }
-
-  .info-box > div {
-    margin: 1rem;
-    display: grid;
-    grid-gap: 1rem;
-  }
-  .ip-address {
-    padding-top: 0.9rem;
-    gap: 1rem;
-  }
-}
-
-@media screen and (max-width: 375px) {
-  .container {
-    background-image: url(/images/pattern-bg-mobile.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
-  input {
-    width: 14rem;
-  }
-
-  .info-box {
-    display: grid;
-    height: 54vh;
-    width: 37vh;
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  span {
-    text-align: center;
-  }
-
-  .info-box > div {
-    margin: 1rem;
-    display: grid;
-    grid-gap: 1rem;
-  }
-
-  .ip-address {
-    padding-top: 0.9rem;
-    gap: 1rem;
-  }
-}
-
-@media screen and (max-width: 360px) {
-  .container {
-    background-image: url(/images/pattern-bg-mobile.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 25vh;
-  }
-
-  input {
-    width: 15rem;
-  }
-
-  .info-box {
-    display: grid;
-    height: 49vh;
-    width: 32vh;
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  span {
-    text-align: center;
-  }
-
-  .info-box > div {
-    margin: 1rem;
-    display: grid;
-    grid-gap: 1rem;
-  }
-
-  .ip-address {
-    padding-top: 0.9rem;
-    gap: 1rem;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .container {
-    background-image: url(/images/pattern-bg-mobile.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 27vh;
-  }
-
-  input {
-    width: 13rem;
-  }
-
-  .info-box {
-    display: grid;
-    height: 77vh;
-    width: 45vh;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 0.4rem;
-  }
-
-  span {
-    text-align: center;
-  }
-
-  .info-box > div {
-    margin: 1rem;
-    display: grid;
-    grid-gap: 1rem;
-  }
-
-  .ip-address {
-    padding-top: 0.9rem;
-    gap: 1rem;
+  #map {
+    height: 65vh;
   }
 }
